# duckdb_v_polars

./: .gitignore  README.md  pyproject.toml
src/: cli.py  config.py  convert_csv_to_parquet_inc.py  data_converter.py  data_generator.py  data_ingestor.py  init_sqlite3.py  make_csv.py  make_jsons.py
src/duckdb_process/: duckdb_process.py  duckdb_processor.py
src/polars_process/: gpu_engine.py  ingest_into_db.py  polars_claude.py  polars_processor.py  polars_streaming.py
