[project]
name = "process-csv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.0",
    "faker>=37.8.0",
    "pandas>=2.3.3",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
process-csv = "src.cli:app"
